<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Калькулятор</string>
    <string name="action_settings">Настройка</string>
    <string name="num1">Операнд 1</string>
    <string name="num2">Операнд 2</string>
    <string name="Operation">Операции:</string>
    <string name="sum">Суммирование</string>
    <string name="subtr">Вычитание</string>
    <string name="div">Деление</string>
    <string name="mult">Умножение</string>
    <string name="go">Считать</string>
    <string name="result_format">Результат: %.2f</string>
    <string name="history">История</string>
    <string name="incorrect_operand">Неверный операнд</string>
    <string name="incorrect_operator">Неверный оператор</string>
    <string name="operator_not_select">Оператор не выбран. Пожалуйста, сделайте выбор.</string>
    <string name="error_operator_not_select">ОШИБКА - ОПЕРАТОР НЕ ВЫБРАН</string>
    <string name="error_incorrect_operand">ОШИБКА - Неверный операнд</string>
</resources>
