<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="@dimen/abc_action_bar_default_height_material"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Operation"
        android:textIsSelectable="false"
        android:layout_below="@+id/name"
        android:id="@+id/oper"
/>

    <View
        android:id="@+id/fake_view"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fake_view"
        android:layout_alignRight="@+id/fake_view"
        android:layout_below="@+id/oper"
        android:hint="@string/num1"
        android:inputType="number"/>

    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oper"
        android:layout_toEndOf="@+id/fake_view"
        android:layout_toRightOf="@+id/fake_view"
        android:hint="@string/num2"
        android:inputType="number"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num1"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/operator_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sum"
            />

        <RadioButton
            android:id="@+id/operator_subtr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtr"
            />

        <RadioButton
            android:id="@+id/operator_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            />


        <RadioButton
            android:id="@+id/operator_mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mult"
            />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/compute_button"
        android:layout_below="@+id/progressBar"
        android:layout_alignLeft="@+id/history_button"
        android:layout_alignStart="@+id/history_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:id="@+id/history_button"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_format"
        android:layout_below="@+id/compute_button"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/radio_group"
        android:layout_alignLeft="@+id/compute_button"
        android:layout_alignStart="@+id/compute_button"/>

</RelativeLayout>
